Move MessagesService predicate methods to PredicateUtil